--- a/src/app/calculator/calculator.component.html
+++ b/src/app/calculator/calculator.component.html
@@ -1,7 +1,7 @@
 
   <div class="row">
     <div class="col-12 text-center">
-      <h2>Welcome to Ajinkya calculator</h2>
+      <h2>Welcome to Megasoft calculator</h2>
     </div>
   </div>
   <div class="row">
@@ -86,3 +86,9 @@
     </div>
   </div>
 </div>
+
+  <footer class="font-small">
+     <div class="footer-copyright text-center py-3">©2019 Copyright:
+      <a href="#">www.calcuco.com</a>
+    </div>
+  </footer>
